feat: add contract tenant, contract vehicle, update contract

--- a/src/i18n/en/en.json
+++ b/src/i18n/en/en.json
@@ -18,7 +18,11 @@
       "addNew": "Add new",
       "history": "History",
       "confirm": "Confirm",
-      "continue": "Continue"
+      "continue": "Continue",
+      "tenants": "Tenants",
+      "active": "Active",
+      "vehicles": "Vehicles",
+      "deposit1": "Deposit refund"
     },
     "noData": "No data",
     "selectDateRange": "Select date range",
