--- a/src/i18n/vi/vi.json
+++ b/src/i18n/vi/vi.json
@@ -677,6 +677,7 @@
       "updatedAt": "Ngày cập nhật"
     },
     "filter": {
+      "title": "-- Dịch vụ --",
       "category": "-- Loại dịch vụ --",
       "calculation": "-- Tính toán dịch vụ --",
       "status": "-- Trạng thái --",
@@ -692,6 +693,43 @@
       "price": "Giá (VNĐ):",
       "placeholderPrice": "3000000",
       "status": "Trạng thái",
+      "description": "Mô tả:",
+      "placeholderDescription": "Nhập mô tả"
+    }
+  },
+  "serviceRoom": {
+    "title": "Dịch vụ phòng",
+    "titleAddOneServiceToOneRoom": "Thêm 1 dịch vụ cho 1 phòng",
+    "titleAddOneServiceToAllRoomsInBuilding": "Thêm 1 dịch vụ cho tất cả các phòng trong 1 tòa nhà",
+    "titleAddOneServiceToMultipleRooms": "Thêm 1 dịch vụ vào các phòng",
+    "titleAddMultipleServicesToOneRoom": "Thêm các dịch vụ vào 1 phòng",
+    "search": "Tìm kiếm",
+    "detailTitle": "Chi tiết dịch vụ phòng",
+    "errorFetch": "Có lỗi xảy ra khi tải dịch vụ phòng.",
+    "errorFetchStatistics": "Có lỗi xảy ra khi tải thống kê phòng.",
+    "errorFetchRoomAndService": "Không lấy được dữ liệu phòng và dịch vụ.",
+    "response": {
+      "roomCode": "Mã phòng",
+      "actions": "Thao tác",
+      "totalServices": "Tổng dịch vụ",
+      "roomType": "Loại phòng",
+      "status": "Trạng thái",
+      "descriptionServiceRoom": "Mô tả"
+    },
+    "filter": {
+      "roomType": "-- Loại phòng --",
+      "status": "-- Trạng thái --",
+      "search": "Tìm kiếm"
+    },
+    "addOrUpdate": {
+      "room": "Phòng:",
+      "placeholderRoom": "Chọn phòng",
+      "service": "Dịch vụ:",
+      "placeholderService": "Chọn dịch vụ",
+      "building": "Tòa nhà:",
+      "placeholderBuilding": "Chọn tòa nhà",
+      "floor": "Tầng:",
+      "placeholderFloor": "Chọn tầng",
       "description": "Mô tả:",
       "placeholderDescription": "Nhập mô tả"
     }
