--- a/src/i18n/en/en.json
+++ b/src/i18n/en/en.json
@@ -271,6 +271,7 @@
     },
 
     "vehicleType": {
+      "total": "Total",
       "motorbike": "Motorbike",
       "car": "Car",
       "bicycle": "Bicycle",
@@ -781,6 +782,45 @@
       "title": "View tenant details",
       "subtitle": "Tenant information, contracts and contact",
       "totalContract": "Total Contracts"
+    }
+  },
+  "vehicle": {
+    "title": "Vehicle",
+    "titleHistory": "Deleted vehicle history",
+    "statistic": "Vehicle statistics",
+    "search": "License plate",
+    "errorFetch": "An error occurred while loading vehicles.",
+    "errorFetchStatistics": "An error occurred while loading vehicle statistics.",
+    "response": {
+      "owner": "Owner",
+      "actions": "Actions",
+      "vehicleType": "Vehicle type",
+      "licensePlate": "License plate",
+      "status": "Status",
+      "registrationDate": "Registration date",
+      "describe": "Description",
+      "createdAt": "Created at",
+      "updatedAt": "Updated at"
+    },
+    "filter": {
+      "placeholderType": "-- Vehicle type --",
+      "placeholderLicense": "License plate",
+      "labelType": "Vehicle type"
+    },
+    "addOrUpdate": {
+      "owner": "Owner",
+      "type": "Vehicle type",
+      "status": "Vehicle status",
+      "registrationDate": "Registration date",
+      "licensePlate": "License plate",
+      "licensePlatePlaceholder": "30A-123.45",
+      "describe": "Description",
+      "describePlaceholder": "Enter description"
+    },
+    "placeholder": {
+      "owner": "-- Select owner --",
+      "type": "-- Select vehicle type --",
+      "status": "-- Select vehicle status --"
     }
   }
 }
