feat: add revenue statistics

--- a/src/i18n/en/en.json
+++ b/src/i18n/en/en.json
@@ -117,6 +117,9 @@
   },
   "sidebar": {
     "dashboard": { "label": "Quick Access", "title": "Dashboard" },
+    "statistics": {
+      "title": "Revenue statistics"
+    },
     "facilities": {
       "label": "Operations Management",
       "title": "Facilities",
