--- a/src/i18n/vi/vi.json
+++ b/src/i18n/vi/vi.json
@@ -116,6 +116,9 @@
   },
   "sidebar": {
     "dashboard": { "label": "Theo dõi nhanh", "title": "Bảng tin" },
+    "statistics": {
+      "title": "Thống kê doanh thu"
+    },
     "facilities": {
       "label": "Quản lý vận hành",
       "title": "Cơ sở vật chất",
