update: update format number

--- a/src/i18n/vi/vi.json
+++ b/src/i18n/vi/vi.json
@@ -18,6 +18,7 @@
       "addNew": "Thêm mới",
       "history": "Xem Lịch sử",
       "confirm": "Xác nhận",
+      "continue": "Tiếp tục",
       "tenants": "Khách thuê",
       "active": "Kích hoạt",
       "vehicles": "Phương tiện",
